Added optional TaskID field for backup and restore create requests.
Allows idempotent backup and restore ops.
